fixed signup button size on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -549,6 +549,10 @@ iframe.embeddedform {
                                     }
                                 }*/
 
+                                > button.tinybutton {
+                                    font-size: 2rem;
+                                }
+
                                 &:after {
                                     content: '';
                                     position: absolute;
